# blink

./: Cargo.toml  build.rs
src/: config.rs  main.rs
src/backends/slint/: mod.rs  winit_helper.rs
src/backends/slint/ui/: appwindow.slint
